@@ -8,11 +8,13 @@ In particular, set the environment variable LANG to your locale, and
 then weewx date and number formatting will follow local conventions.
 Details in a new section in the Customization Guide.
 
-Added aggregate type "minmax" and "maxmin", thanks to user Gary Roderick.
-Thanks, Gary!
+Added aggregate type "minmax" and "maxmin". Thank you user Gary Roderick!
 
 WMR100, Vantage, FineOffset, and WS28xx drivers now emit a null wind
 direction when the wind speed is zero.
+
+For WMR9x8 stations, wind chill is now retrieved from the console
+rather than calculated in software. Thank you user Peter Ferencz!
 
 The LOOP value for daily ET on Vantages was too high by a factor of 10. 
 This has been corrected.
